fixed spacing and layout of detail works page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,7 @@
 
 * {
   font-family: 'canada-type-gibson', sans-serif;
+  scroll-behavior: smooth;
 }
 
 
