--- a/client/src/components/Works/style.css
+++ b/client/src/components/Works/style.css
@@ -75,5 +75,5 @@ left:30%;
 }
 
 .works-page {
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
